--- a/src/main/resources/template/main.css
+++ b/src/main/resources/template/main.css
@@ -17,11 +17,6 @@ body {
     background-color: #e0e3ea;
 }
 
-.section {
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
-}
-
 header, .section {
     padding: 2.1rem 2rem 0;
 }
@@ -65,23 +60,10 @@ li {
     padding: 0;
 }
 
-
-
-
 .title {
-    margin:0 0 25px 0;
+    margin:0 0 15px 0;
+    text-align: center;
 }
-
-.section a[name="othergenes"] h3, h2 {
-    font-family: "DIN Next", Helvetica, Arial, sans-serif;
-    font-weight: 700;
-    font-size: 1.5rem;
-    line-height: 1;
-    margin: 0 0 0.5rem;
-    padding: 0;
-}
-
-
 
 /* Navigation, Header */
 .banner {
@@ -98,7 +80,7 @@ li {
     border-top: 1px solid #ccc;
 }
 
-.nav a[href] {
+.nav li {
     color: white;
     text-decoration: none;
     color: rgba(255, 255, 255, 0.8);
@@ -106,20 +88,16 @@ li {
     display: block;
     padding: 1rem;
     font-weight: 400;
+    cursor: pointer;
 }
 
-.nav li:last-child a[href] {
-    padding-right: 2.25rem;
-}
-
-.nav a[href]:hover {
+.nav li:hover {
     color: #05396b;
     background-color: #04c3ff;
 }
 
 .nav ul {
     display: table;
-    float: right;
     margin: 0;
 }
 
@@ -128,13 +106,21 @@ li {
     float: left;
 }
 
+.nav .nav-icons-home {
+    float: left;
+}
+
+.nav .nav-icons-support {
+    float: right;
+}
+
 /* Main Sections */
 .section {
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     background-color: white;
     padding: 2.1rem 2rem 1.6rem;
-
+    box-shadow: 0 1px 2px 0 #c0c0c0;
 }
 
 .section  a[name="othergenes"] {
@@ -142,6 +128,52 @@ li {
     margin-top: 1.5rem;
     background-color: white;
     padding: 2.1rem 2rem 1.6rem;
+}
+
+.section a[name="othergenes"] h3, h2 {
+    font-family: "DIN Next", Helvetica, Arial, sans-serif;
+    font-weight: 700;
+    font-size: 1.5rem;
+    line-height: 1;
+    margin: 0 0 0.5rem;
+    padding: 0;
+}
+
+.section.extra {
+    display: none;
+    padding: 1rem;
+    width: 75%;
+    margin: 1rem 0 1rem 15%;
+}
+
+.remove-extra {
+    position: relative;
+    top: -20px;
+    left: -75px;
+    font-size: 24px;
+    cursor: pointer;
+}
+.main .section:first-child {
+    width: 40%;
+    padding: 5px;
+    height: 100px;
+    margin: 1rem 0 0 30%;
+}
+
+.info-table {
+    margin: 0.5rem 0 0 1rem;
+}
+.info-table .table-label {
+    text-align: justify-all;
+    text-transform: UPPERCASE;
+    font-weight: bold;
+    color: #575858b5;
+    font-size: 12px;
+}
+
+.info-table .table-data {
+    font-weight: bold;
+    font-size: 14px;
 }
 
 table {
