--- a/src/main/resources/template/main.css
+++ b/src/main/resources/template/main.css
@@ -199,6 +199,10 @@ table.redTable {
 
 table.redTable td {
     background-color: #f0f3fa;
+    text-align: right;
+    content: CommaFormatted();
+    font-variant
+
 }
 
 table.minimalistBlack th,
@@ -271,4 +275,28 @@ footer {
     background-color: #05396b;
     color: white;
     padding: 1rem 2rem;
+}
+
+function CommaFormatted(amount) {
+	var delimiter = ","; // replace comma if desired
+	var a = amount.split('.',2)
+	var d = a[1];
+	var i = parseInt(a[0]);
+	if(isNaN(i)) { return ''; }
+	var minus = '';
+	if(i < 0) { minus = '-'; }
+	i = Math.abs(i);
+	var n = new String(i);
+	var a = [];
+	while(n.length > 3) {
+		var nn = n.substr(n.length-3);
+		a.unshift(nn);
+		n = n.substr(0,n.length-3);
+	}
+	if(n.length > 0) { a.unshift(n); }
+	n = a.join(delimiter);
+	if(d.length < 1) { amount = n; }
+	else { amount = n + '.' + d; }
+	amount = minus + amount;
+	return amount;
 }
